--- a/articles/templates/base.html
+++ b/articles/templates/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %} Articles</title>
+    <style>{% block style %}{% endblock %} </style>
   </head>
   <body>
     {% block content %}
