--- a/articles/templates/base.html
+++ b/articles/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>{% block title %}{% endblock %} Articles</title>
+    <title>{% block title %}{% endblock %}</title>
     <style>{% block style %}{% endblock %} </style>
   </head>
   <body>
