Enhancing the UI of the application

--- a/articles/templates/articles/success_email.html
+++ b/articles/templates/articles/success_email.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Success Mail{% endblock %}
+{% block head %}
+<title> Success Mail</title>
+{% endblock %}
 
 {% block content %}
 <div class="jumbotron text-center">
