--- a/articles/templates/articles/articles_list.html
+++ b/articles/templates/articles/articles_list.html
@@ -1,28 +1,34 @@
 {% extends "base.html" %}
-{% block title %}Today Articles{% endblock %}
 
-{% block style %} 
-    .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 50%;
-            }
+{% block head %} 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+<style>
+    .card-custom {
+        max-width: 300px;
+    }
+     .card-title{
+    font-size:19px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+</style>
 {% endblock %}
-\
+
 {% block content %}
-<div class="articles-list">
-  {% for article in articles %}
-  <div class="article center">
-  {% if article.valid_image %}
-    <h3 class="center" >{{ article.title }}</h3>
-    <p>
-      <a href="{% url 'email' article.id %}">
-        <img  src="{{ article.image_url }}"/>
-      </a>
-    </p>
-  {% endif %}
-  </div>
-  {% endfor %}
+<div class="container">
+    <div class="row mt-5 justify-content-center">
+    {% for article in articles %}
+    {% if article.valid_image %}
+        <div class="card card-custom mx-2 mb-3">
+            <h4 class="card-title">{{ article.title }}</h4>
+            <a href="{% url 'email' article.id %}">
+               <img src="{{ article.image_url }}" alt="" class="card-img">
+           </a>
+        </div>
+      {% endif %}
+    {% endfor %}    
+    </div>
 </div>
 {% endblock %}
