--- a/articles/templates/articles/email.html
+++ b/articles/templates/articles/email.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}
-        Send an email
+{% load crispy_forms_tags %}
+
+{% block head %} 
+
+<title> Send a mail</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 {% endblock %}
 
 {% block content %}
-    <form action="{% url 'send-email' %}" method="post">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-8">
+          <h1 class="mt-2">New Message</h1>
+          <hr class="mt-0 mb-4">
+
+    <form action="{% url 'send-email' %}" method="post" novalidate>
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Send Email</button>
+        {{ form|crispy }}
+       <button type="submit" class="btn btn-success">Send Email</button>
     </form>
 {% endblock %}
