--- a/articles/templates/articles/fail_email.html
+++ b/articles/templates/articles/fail_email.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Error{% endblock %}
+{% block head %}
+<title> Success Mail</title>
+{% endblock %}
 
 {% block content %}
 <div class="jumbotron text-center">
-  <h1 class="display-3">Sorry!</h1>
-  <p class="lead"><strong>Your message has not been sent. Please try again</strong></p>
+  <h1 class="display-3">Error!</h1>
+  <p class="lead"><strong>Your message has not been sent. Please try a verified email</strong></p>
   <hr>
   <p class="lead">
     <a class="btn btn-primary btn-sm" href="{% url 'list-articles' %}" role="button">Continue to homepage</a>
