--- a/articles/templates/base.html
+++ b/articles/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>{% block title %}{% endblock %}</title>
-    <style>{% block style %}{% endblock %} </style>
+  {% block head %}
+  {% endblock %}
   </head>
   <body>
     {% block content %}
